--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
         jvmTarget = '1.8'
     }
 }
+def lottieVersion = "3.4.0"
+def lifecycleVersion = "2.4.0"
 
 dependencies {
 
@@ -39,21 +41,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    testImplementation 'junit:junit:'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
 //LifeCycle
-    implementation 'androidx.lifecycle:lifecycle-common:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
 
 //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
@@ -63,4 +60,8 @@ dependencies {
 
 //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+
+//Lottie for animation
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
 }
